Don't stop QPlaformWindow updateRequest timer until after delivery

Delivery of the update request may be circumvented temporarily by the
platform window, or the user may request another update during the
delivery, so wait to stop the timer until we know we don't need it
anymore.

Pick-to: 6.8
Fixes: QTBUG-135950
Change-Id: Ie6d1f0f726b66ab6a8036f281b46e525084d90e8
Reviewed-by: Morten Johan Sørvig <morten.sorvig@qt.io>
(cherry picked from commit 2e6032188fee4430afbea377350c55dde46bfb43)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>